# nonebot-plugin-fakemsg

./: .flake8  .pdm-python  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml  ruff-check.yml
nonebot_plugin_fakemsg/: __init__.py  config.py
