[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["nonebot_plugin_fakemsg"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "nonebot-plugin-fakemsg"
version = "0.1.9"
description = "适用于onebot的伪消息插件"
authors = [
    {name = "Cvandia",email = "106718176+Cvandia@users.noreply.github.com"},
]
dependencies = [
    "nonebot-adapter-onebot>=2.0.0-beta.1",
    "nonebot2>=2.0.0-beta.1",
]
requires-python = "<4,>=3.8"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = ["ruff>=0.8.1", "pre-commit>=3.5.0"]
